# arca-fio

./: .gitignore  Dockerfile  README.md  fio_plugin.py  fio_schema.py  pyproject.toml  requirements.txt  run_fio.sh  test_fio_plugin.py
.github/: build.yaml
etc-fio/: poisson-rate-submission.ini  poisson-rate-submission.yaml
mocks/: poisson-rate-submission_input.yaml  poisson-rate-submission_plus-output.json
results/: 2022-08-01T16:09-04:00_plus_poisson-submit.json
