[tool.poetry]
name = "arca-fio"
version = "0.1.0"
description = ""
authors = ["Matthew F Leader"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
arcaflow-plugin-sdk = {git = "https://github.com/arcalot/arcaflow-plugin-sdk-python.git", rev = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
